--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,7 +17,7 @@ services:
         target: /etc/nginx/conf.d/default.conf
         read_only: true
       - type: volume
-        source: frontend
+        source: dnode-frontend
         target: /var/www/dnote/
 
 volumes:
