--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     command: node index.js
 
   redis:
-    image: dnode_redis
+    container_name: dnode_redis
     image: redis:4-alpine
 
 networks:
