--- a/docker/nginx/vhost.conf
+++ b/docker/nginx/vhost.conf
@@ -3,7 +3,7 @@ server {
     root /var/www/dnote/dist;
 
     location /notes {
-          proxy_pass http://backend:3000;
+          proxy_pass http://dnode_backend:3000;
     }
 
     location / {
